syntax = "proto3";
package rating.v1;

option go_package = "github.com/ouiasy/microservice-go/api/gen/go";

service RatingService {
  rpc GetAggregatedRating(GetAggregatedRatingRequest) returns (GetAggregatedRatingResponse);
  rpc PutRating(PutRatingRequest) returns (PutRatingResponse);
}

message GetAggregatedRatingRequest {
  string record_id = 1;
  int32 record_type = 2;
}

message GetAggregatedRatingResponse {
  double rating_value = 1;
}

message PutRatingRequest {
  string user_id = 1;
  string record_id = 2;
  int32 record_type = 3;
  int32 rating_value = 4;
}

message PutRatingResponse {
}